feat: update role api
