# app/user/controller/permission.go
@@ -29,7 +29,7 @@ func NewPermissionController(service *service.PermissionService) *PermissionCont
 // @Security Bearer
 // @Param request body define.CreatePermissionRequest true "CreatePermissionRequest"
 // @Success 200 {object} common.Response
-// @Router /permission [post]
+// @Router /permissions [post]
 func (c *PermissionController) CreatePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "create"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -66,7 +66,7 @@ func (c *PermissionController) CreatePermission(ctx *gin.Context) {
 // @Param permission_id path int true "permission_id"
 // @Param request body define.UpdatePermissionRequest true "UpdatePermissionRequest"
 // @Success 200 {object} common.Response
-// @Router /permission/{permission_id} [put]
+// @Router /permissions/{permission_id} [put]
 func (c *PermissionController) UpdatePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "update"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -107,7 +107,7 @@ func (c *PermissionController) UpdatePermission(ctx *gin.Context) {
 // @Security Bearer
 // @Param permission_id path int true "permission_id"
 // @Success 200 {object} common.Response
-// @Router /permission/{permission_id} [delete]
+// @Router /permissions/{permission_id} [delete]
 func (c *PermissionController) DeletePermission(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "delete"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -144,7 +144,7 @@ func (c *PermissionController) DeletePermission(ctx *gin.Context) {
 // @Param page_size query int false "page_size"
 // @Param target query string false "name"
 // @Success 200 {object} common.Response{data=common.Page{list=[]define.PermissionPageResponse}}
-// @Router /permission [get]
+// @Router /permissions [get]
 func (c *PermissionController) ListPermissions(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "permission", "list"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
