# app/user/controller/role.go
@@ -29,7 +29,7 @@ func NewRoleController(service *service.RoleService) *RoleController {
 // @Security Bearer
 // @Param request body define.CreateRoleRequest true "CreateRoleRequest"
 // @Success 200 {object} common.Response
-// @Router /role [post]
+// @Router /roles [post]
 func (c *RoleController) CreateRole(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "role", "create"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -66,7 +66,7 @@ func (c *RoleController) CreateRole(ctx *gin.Context) {
 // @Param request body define.UpdateRoleRequest true "UpdateRoleRequest"
 // @Param role_id path int true "role_id"
 // @Success 200 {object} common.Response
-// @Router /role/{role_id} [put]
+// @Router /roles/{role_id} [put]
 func (c *RoleController) UpdateRole(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "role", "update"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -107,7 +107,7 @@ func (c *RoleController) UpdateRole(ctx *gin.Context) {
 // @Security Bearer
 // @Param role_id path int true "role_id"
 // @Success 200 {object} common.Response
-// @Router /role/{role_id} [delete]
+// @Router /roles/{role_id} [delete]
 func (c *RoleController) DeleteRole(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "role", "delete"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
@@ -143,7 +143,7 @@ func (c *RoleController) DeleteRole(ctx *gin.Context) {
 // @Param page query int false "page"
 // @Param page_size query int false "page_size"
 // @Success 200 {object} common.Response{data=common.Page{list=[]define.RolePageResponse}}
-// @Router /role [get]
+// @Router /roles [get]
 func (c *RoleController) ListRoles(ctx *gin.Context) {
 	if ok := utils2.CheckPermission(ctx, "role", "list"); !ok {
 		ctx.JSON(http.StatusForbidden, &common.Response{
